# simple-tftp

./: Cargo.toml  README.md
examples/: server.rs
src/: datastream.rs  error.rs  lib.rs  packet.rs  server.rs  socket.rs
