[package]
name = "simple-tftp"
version = "0.1.0"
edition = "2021"
authors = ["Hayley Deckers <hayley@fusion.engineering, im@fckn.gay>"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = { version = "0.7.4", default-features = false }
